# RenderCV

./: Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/models/: cv.py
app/templates/: cv.css  cv.html  cv.html.bak  cv.scss  cv_testing.html
tests/: preview_cv.py  test_main.py  test_render_cv.py
