[project]
name = "rendercv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "fastapi-cli>=0.0.10",
    "jinja2>=3.1.6",
    "weasyprint>=66.0",
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
